chore(kumo): add contributing guide (#112)
* chore(kumo): add contributing guide

* chore(kumo): changeset

* chore(kumo): fixups

* Apply suggestion from @rozenmd

--- a/packages/kumo/package.json
+++ b/packages/kumo/package.json
@@ -394,6 +394,7 @@
     "test:unit": "vitest run --project=unit",
     "test:coverage": "vitest run --coverage",
     "test:exports": "vitest run --project=unit tests/imports/export-path-validation.test.ts",
+    "test:watch": "vitest run --project=unit --watch",
     "typecheck": "tsc --noEmit",
     "validate:build": "vitest run --project=unit tests/imports/export-path-validation.test.ts",
     "validate:changeset": "tsx ../../ci/scripts/validate-kumo-changeset.ts"
